--- a/stu.html
+++ b/stu.html
@@ -1,1 +1,45 @@
+<html>
+	<head>
+		<script type="text/javascript">
+			function Student(name)
+			{
+				this.name=name;
+				this.marks=new Array(Math.floor(Math.random()*100),Math.floor(Math.random()*100),Math.floor(Math.random()*100));
+			}
+			var stu1=new Student("dattu");
+			var stu2=new Student("teja");
+			var stu3=new Student("bindu");
+			var stu4=new Student("yamini");
+			var stu5=new Student("cr");
+			var stu=[stu1,stu2,stu3,stu4,stu5];
+			var sum=0;
+			for(var i=0;i<5;i++)
+			{
+			    for(var j=0;j<3;j++)
+			    {
+					stu[i].sum=sum+stu[i].marks[j];
+			    }
+		   }
+		   for(var i=0;i<5;i++)
+		   {
+			    for(var j=0;j<3;j++)
+			    {
+					stu[i].avg=stu[i].sum/3;
+			    }
+		   }
+		   stu.sort(function(a,b){return b.avg-a.avg});
+		   for(var i=0;i<5;i++)
+		   {
+			   document.writeln(stu[i].name+" "+stu[i].avg);
+		   }
+		   stu.sort(function(a,b){return b.sum-a.sum});
+		   for(var i=0;i<5;i++)
+		   {
+			   document.writeln(stu[i].name+" "+stu[i].sum);
+		   }	
+		</script>
+	</head>
+	<body>
+	</body>
+</html>
 
